Home page was changed from flex to grid. Sidebar is no longer fixed to the page. the main view now has an overflow for the content making it scrollable

--- a/stacker/client/src/components/styles/Home.css
+++ b/stacker/client/src/components/styles/Home.css
@@ -16,16 +16,6 @@ body {
     grid-template-rows: 100vh;
 }
 
-/* .main::before {
-    content: '';
-    position: absolute;
-    z-index: -100;
-    bottom: 0;
-    background: linear-gradient(to top, transparent, #191414,#191414, rgb(127, 0, 0));
-    height: 100%;
-    width: 100%;
-} */
-
 .main {
     position: relative;
     display: flex;
